# cantdrown-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/audio/: mod.rs  normalize.rs  playlist.rs
src/commands/: doom.rs  meta.rs  mod.rs  role.rs  song.rs
src/config/: doom.rs  mod.rs
src/util/: mod.rs
