[package]
name = "cantdrown"
version = "0.1.0"
authors = ["charlie <charlieschuy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
dotenv = "0.15"
lazy_static = "1.4.0"
rand = "0.8"
regex = "1"
reqwest = "0.11"
serenity = { version = "0.10", features = ["voice"] }
songbird = { version = "0.1", features = ["builtin-queue"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
url = "2"
zip = "0.5"
