[package]
name = "cantdrown"
version = "0.1.0"
authors = ["charlie <charlieschuy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
blake3 = "0.3"
bytes = "1"
dotenv = "0.15"
flexi_logger = "0.17"
glob = "0.3"
home = "0.5"
lavalink-rs = { git = "https://gitlab.com/vicky5124/lavalink-rs", branch = "master", features = ["rustls", "serenity", "songbird"] }
lazy_static = "1.4.0"
log = "0.4"
nonzero_ext = "0.2"
rand = "0.8"
ratelimit_meter = "5"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.10", features = ["voice"] }
songbird = { version = "0.2", features = ["builtin-queue", "serenity-rustls"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
toml = "0.5"
url = "2"
zip = "0.5"
